Correcion de imgs y bugs en modo movil

--- a/consultoria.html
+++ b/consultoria.html
@@ -120,8 +120,9 @@
 					</div>
 					<div class="col-sm-2"></div>
 				</div>
-				<figure>
+				<figure id="banderinesImgs">
 					<img src="./img/banderines-consultoria.png">
+					<img src="./img/banderin.png" style="display: none">
 				</figure>
 			</section>
 			<footer class="page-footer blue center-on-small-only">
