--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 				</figure>
 				<figure id="bombilla">
 					<img src="./img/recurso11.png" alt="">
+					<img src="./img/recurso112.png" alt="" style="display:none">
 				</figure>
 				<div class="row">
 					<div class="col-sm-2">
